# BLAZE

./: .gitignore  BUILD_STATUS.md  CHANGELOG.md  COMPILER_GUIDE.md  COMPLETION_REPORT.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  DEPLOY_NOW.txt  EXAMPLES_GUIDE.md  FEATURE_COMPLETE.md  FINAL_CHECKLIST.md  FINAL_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION.md  LICENSE  LLVM_18_UPDATE.md  QUICKSTART.md  QUICK_START.md  QUICK_START_DEPLOY.md  README.md  TEST_DOCUMENTATION.md  UPDATE_BADGES.md  UPDATE_SUMMARY.md  WHATS_NEXT.md  blaze_mega_prompt.md  build.ps1  build_test.ps1  commit_msg.txt  git_setup.ps1  rustfmt.toml  setup.bat  test_simple.blz  verify_pipeline.rs
.github/: CI_CD_DOCUMENTATION.md  PULL_REQUEST_TEMPLATE.md
benches/: codegen_bench.rs  lexer_bench.rs  parser_bench.rs
docs/: API_REFERENCE.md  BORROW_CHECKER_VERIFICATION.md  COMPILER_ARCHITECTURE.md  COOKBOOK.md  DIAGNOSTIC_SYSTEM_GUIDE.md  GETTING_STARTED.md  LANGUAGE_REFERENCE.md  SEMANTIC_ANALYSIS_IMPROVEMENTS.md  TEST_COVERAGE.md  TROUBLESHOOTING.md
examples/: 02_fibonacci.blz  03_structs.blz  04_ownership.blz  05_pattern_matching.blz  06_async_http_server.blz  06_generics.blz  07_database_orm.blz  08_multi_threaded_crawler.blz  09_json_parser.blz  10_concurrent_hashmap.blz  README.md  advanced_functions.blz  advanced_types.blaze  complete_example.blaze  comprehensive_demo.blz  data_structures.blz  diagnostic_example.rs  fibonacci.blz  hello.blz  hello_world.blz  mathematical_operations.blz  matrix_operations.blz  ownership_demo.blz  sorting_algorithms.blz  string_operations.blz  struct_example.blz  structs_and_enums.blz
runtime/: Cargo.toml
scripts/: coverage.ps1  coverage.sh
src/: lib.rs  main.rs  test_runner.rs
std/: lib.blz  option.blz  prelude.blz  result.blz  string.blz  vec.blz
tests/: borrow_checker_integration_tests.rs  codegen_integration_tests.rs  comprehensive_tests.rs  coverage_improvement_tests.rs  diagnostics_tests.rs  end_to_end_tests.rs  error_handling_tests.rs  example_programs_test.rs  lexer_tests.rs  (+6 more)
(+139 files in other folders)
