[package]
name = "blaze"
version = "0.1.0"
edition = "2021"
authors = ["Blaze Contributors"]

[[bin]]
name = "blaze"
path = "src/main.rs"

[lib]
name = "blaze_compiler"
path = "src/lib.rs"

[dependencies]
inkwell = { version = "0.2", features = ["llvm15-0"] }
anyhow = "1.0"
dashmap = "5.5"
parking_lot = "0.12"
petgraph = "0.6"
libc = "0.2"

[dev-dependencies]
tempfile = "3.8"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3