[package]
name = "blaze"
version = "0.1.0"
edition = "2021"
authors = ["Blaze Contributors"]

[[bin]]
name = "blaze"
path = "src/main.rs"

[lib]
name = "blaze_compiler"
path = "src/lib.rs"

[dependencies]
inkwell = { version = "0.4", features = ["llvm10-0"], optional = true }
anyhow = "1.0"
dashmap = "5.5"
parking_lot = "0.12"
petgraph = "0.6"
libc = "0.2"
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
tower-lsp = "0.20"
lsp-types = "0.94"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
colored = "2.1"
regex = "1.10"
walkdir = "2.4"
toml = "0.8"
semver = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tar = "0.4"
flate2 = "1.0"
sha2 = "0.10"
hex = "0.4"
chrono = "0.4"
rayon = "1.8"
crossbeam = "0.8"
once_cell = "1.19"
lazy_static = "1.4"
dirs = "5.0"
num_cpus = "1.16"
tempfile = "3.8"

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"
proptest = "1.4"
insta = "1.34"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3

[features]
default = []
llvm = ["inkwell"]